<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mahe.prg_1.CreateContactActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginBottom="110dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="111dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/name_edit"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="29dp"
        android:text="@string/phone"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintRight_toLeftOf="@+id/phone_edit"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginBottom="192dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/phone"
        app:layout_constraintRight_toLeftOf="@+id/email_edit"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="194dp"
        android:layout_height="0dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_edit"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/phone_edit"
        android:layout_width="194dp"
        android:layout_height="47dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone_edit"
        app:layout_constraintRight_toRightOf="@+id/name_edit"
        app:layout_constraintTop_toBottomOf="@+id/name_edit"
        tools:layout_constraintTop_creator="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="194dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email_edit"
        app:layout_constraintRight_toRightOf="@+id/phone_edit"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_edit"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/submit"
        android:layout_width="107dp"
        android:layout_height="51dp"
        android:text="@string/submit"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="95dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="94dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email_edit" />

</android.support.constraint.ConstraintLayout>
